[package]
name = "combiner-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.62", default-features = false, features = ["std"] }
clap = { version = "3.2.17", features = ["derive"] }
harmony = {path = "../harmony"}
